[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "orbit-framework-kit"
version = "0.1.0"
description = "Unified Orbit framework bundle"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Pranav Manglik" }
]

license = { text = "MIT" }

dependencies = [
    "orbit-framework-core",
    "orbit-framework-server",
    "orbit-framework-cli",
    "orbit-framework-types"
]

keywords = [
    "orbit",
    "framework",
    "fullstack",
    "backend",
    "frontend",
    "api",
    "ssg"
]

classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent",

    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",

    "Typing :: Typed",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orbit_kit*"]


[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]
