[build-system]
requires = [
  "setuptools>=69",
  "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "orbit-framework-kit"
version = "0.2.0"
description = "Shared developer infrastructure for the Orbit ecosystem"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
  { name = "Pranav Manglik" }
]

keywords = [
  "orbit",
  "framework",
  "tooling",
  "infrastructure",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "typer>=0.12.0",
]


[tool.setuptools.packages.find]
include = ["orbit_kit*"]