[build-system]
requires = [
"setuptools>=69",
"wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "orbit-framework-kit"
version = "0.3.0"

description = "Shared infrastructure, utilities, and developer tooling primitives for the Orbit ecosystem"
readme = "README.md"

requires-python = ">=3.12"

license = { text = "MIT" }

authors = [
{ name = "Pranav Manglik" }
]

keywords = [
"orbit",
"framework",
"tooling",
"infrastructure",
"developer-tools",
"utilities",
"runtime",
"filesystem",
"validation",
"cli",
]

classifiers = [
"Development Status :: 3 - Alpha",

"Intended Audience :: Developers",

"License :: OSI Approved :: MIT License",

"Operating System :: OS Independent",

"Programming Language :: Python",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13",

"Topic :: Software Development",
"Topic :: Software Development :: Libraries",
"Topic :: Software Development :: Libraries :: Python Modules",
"Topic :: Utilities",
]

dependencies = [
"typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/undreamt-hq/orbit"
Repository = "https://github.com/undreamt-hq/orbit"
Issues = "https://github.com/undreamt-hq/orbit/issues"
Documentation = "https://learn.undreamt.dev/orbit"

[project.optional-dependencies]
dev = [
"pytest>=8.0",
"pytest-cov>=5.0",
"ruff>=0.8",
]

[tool.setuptools.packages.find]
include = [
"orbit_kit*",
]

[tool.pytest.ini_options]
testpaths = [
"tests",
]

python_files = [
"test_*.py",
]

addopts = [
"-ra",
]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
"E",
"F",
"I",
"UP",
"B",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
